--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <!-- Navigation -->
         <nav id="navbar">
-            <div class="logo">CC</div>
+            <div class="logo">DL</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
